// Descriptor file using standard Protocol Buffers features, in proto3 format.

// [START declaration]
syntax = "proto3";
package com.vmware.blockchain.protobuf.plugin.grpc;
// [END declaration]

// [START java_declaration]
option java_package = "com.vmware.blockchain.protobuf.plugin.grpc.java";
option java_multiple_files = true;
// [END java_declaration]

// [START messages]
message EchoRequest {
    string message = 1;
    int32 count = 2;
}

message EchoResponse {
    string message = 1;
    int32 count = 2;
}
// [END messages]

// [START services]
service RpcService {
    rpc echo(EchoRequest) returns (EchoResponse);
    rpc echoResponseStream(EchoRequest) returns (stream EchoResponse);
    rpc echoRequestStream(stream EchoRequest) returns (EchoResponse);
    rpc echoStream(stream EchoRequest) returns (stream EchoResponse);
}
// [END services]